# asr-post-editor

./: .gitignore  CMakeLists.txt  README.md  changespeakerdialog.cpp  changespeakerdialog.h  changespeakerdialog.ui  completer.qrc  editor.cpp  editor.h  findreplacedialog.cpp  findreplacedialog.h  highlighter.cpp  highlighter.h  keyboardshortcutguide.cpp  main.cpp  mediaplayer.cpp  mediaplayer.h  playercontrols.cpp  playercontrols.h  texteditor.cpp  texteditor.h  tool.cpp  tool.h  tool.ui
editor/: blockandword.h  editor.cpp  editor.h  texteditor.cpp  texteditor.h  wordeditor.cpp  wordeditor.h  wordlists.qrc
editor/utilities/: keyboardshortcutguide.cpp  tagselectiondialog.cpp  tagselectiondialog.h  tagselectiondialog.ui
editor/wordlists/: english_wordlist.txt  gujarati_wordlist.txt  hindi_wordlist.txt
